--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_admin_doctor">Admin_doctor</string>
     <string name="title_activity_ad__dr_ditails">ad_Dr_ditails</string>
+    <string name="title_activity_doctor__admin_2">Doctor_Admin_2</string>
 </resources>
